[package]
name = "seafood-cloud-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.10.1"
uuid = { version = "1.16", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"